--- a/gc-samples/pom.xml
+++ b/gc-samples/pom.xml
@@ -4,17 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.gc</groupId>
-        <artifactId>gc-auth</artifactId>
+        <artifactId>gc-boot</artifactId>
         <version>1.0.6-SNAPSHOT</version>
     </parent>
-    <artifactId>gc-auth-shiro</artifactId>
+    <artifactId>gc-samples</artifactId>
     <version>1.0.6-SNAPSHOT</version>
-    <name>gc-auth-shiro</name>
-    <description>shiro权限认证器</description>
-
+    <name>gc-samples</name>
+    <description>示例模块</description>
     <properties>
     </properties>
-
     <dependencies>
 
     </dependencies>
