--- a/gc-commons/gc-cache-common/pom.xml
+++ b/gc-commons/gc-cache-common/pom.xml
@@ -16,7 +16,10 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
