--- a/gc-commons/gc-validate-common/pom.xml
+++ b/gc-commons/gc-validate-common/pom.xml
@@ -20,6 +20,10 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
     </dependencies>
 
 
