--- a/gc-starter/crud-spring-boot-starter/pom.xml
+++ b/gc-starter/crud-spring-boot-starter/pom.xml
@@ -18,10 +18,10 @@
 	<dependencies>
 
 		<!--引入阿里巴巴Druid springboot启动器-->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.alibaba</groupId>-->
+<!--			<artifactId>druid-spring-boot-starter</artifactId>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>com.gc</groupId>
